--- a/src/hepattn/experiments/atlas_muon/configs/NGT/noNSWRPC/atlas_muon_tracking_NGT_small_new_regression.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/noNSWRPC/atlas_muon_tracking_NGT_small_new_regression.yaml
@@ -304,10 +304,8 @@ model:
                 fields:
                   - truthMuon_eta
                   - truthMuon_phi
-                  - truthMuon_pt
+                  - truthMuon_pt_norm  # Use normalized pT (pT/200)
                   - truthMuon_q
-                inverse_fields:
-                  - truthMuon_pt
                 loss_weight: 1.0
                 dim: 32
                 assignment_threshold: 0.1
