--- a/src/hepattn/experiments/atlas_muon/configs/NGT/smallCuts/atlas_muon_tracking_NGT_small_better_regression.yaml
+++ b/src/hepattn/experiments/atlas_muon/configs/NGT/smallCuts/atlas_muon_tracking_NGT_small_better_regression.yaml
@@ -1,5 +1,5 @@
 seed_everything: 42
-name: TRK-ATLAS-Muon-smallModel-noNSW-noRPC
+name: TRK-ATLAS-Muon-smallModel-better-regression
 # ckpt_path: /home/iwsatlas1/jrenusch/master_thesis/tracking/hepattn_muon/logs/TRK-v0-full_20250630-T152409/ckpts/epoch=029-val_loss=0.61685.ckpt
 
 data:
@@ -304,10 +304,8 @@ model:
                 fields:
                   - truthMuon_eta
                   - truthMuon_phi
-                  - truthMuon_pt
+                  - truthMuon_pt_norm  # Use normalized pT (pT/200)
                   - truthMuon_q
-                inverse_fields:
-                  - truthMuon_pt
                 loss_weight: 1.0
                 dim: 32
                 assignment_threshold: 0.1
